FIX: validations and add features

--- a/Formulario/Form.html
+++ b/Formulario/Form.html
@@ -48,6 +48,7 @@
             <div id="tipoVehiculoDiv" class="hidden">
                 <label for="tipoVehiculo">Tipo de vehículo:</label>
                 <input type="text" id="tipoVehiculo" name="tipoVehiculo" placeholder="Ingrese su tipo de vehículo, ej: Chevrolet">
+                <small id="tipoVehiculoError" class="error-msg">Ingrese un tipo de vehículo.</small>
             </div>
 
             <!-- Carga de archivo -->
